@@ -27,5 +27,5 @@ input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px;
 #search_div				{margin-top:20px;}
 #search_div span#search_span span	{display:block; padding-top:5px;}
 
-a#search_link			{display:block; padding:25px 20px; border-radius:8px; text-align:center; margin:0 auto; font-size:1.6em; margin-top:40px;}
+a#search_link			{display:block; text-align:center; margin:0 auto; font-size:1.6em; position:absolute; right:0; bottom:0; background-color:#172027; border-radius:0 8px 8px 0; height:64px; max-height:64px; box-sizing:border-box; padding:20px;}
 a#search_link span		{display:block; font-style:italic; font-size:0.6em; padding-top:5px;}
