@@ -882,5 +882,8 @@ IATI出版社
 #search_button2_txt
 （打开新窗口）
 
+#search_button3_txt
+搜索
+
 #search_placeholder_txt
-键入要搜索和按Enter键（例如，quake），或点击添加
+类型（如地震）或添加过滤器来缩小搜索范围
