@@ -882,5 +882,8 @@ Explore Search Results
 #search_button2_txt
 (Opens in new window)
 
+#search_button3_txt
+Search
+
 #search_placeholder_txt
-Type to Search & press Enter (eg. quake) or Click to Add
+Type (eg. quake) or add Filters to narrow your search
