@@ -884,5 +884,8 @@ Explorez Résultats
 #search_button2_txt
 (Ouvre nouvelle fenêtre)
 
+#search_button3_txt
+Chercher
+
 #search_placeholder_txt
-Tapez à Préciser, appuyez sur Entrée (ex. quake) ou sur pour ajouter
+Type (par ex. Séisme) ou ajouter des filtres pour affiner votre recherche
