@@ -881,5 +881,8 @@ IATI प्रकाशक
 #search_button2_txt
 (नई विंडो में खुलता है)
 
+#search_button3_txt
+खोज
+
 #search_placeholder_txt
-खोज एवं प्रेस दर्ज (उदाहरण। quake) या जोड़ने के लिए टाइप
+प्रकार (जैसे। भूकंप) या फिल्टर जोड़ें अपनी खोज को संकीर्ण
