@@ -884,5 +884,8 @@ IATI出版
 #search_button2_txt
 （新しいウィンドウで開きます）
 
+#search_button3_txt
+サーチ
+
 #search_placeholder_txt
-検索・Enterを押します（例。quake）追加します
+入力します（例えば地震）、またはあなたの検索を絞り込むためにフィルタを追加
