@@ -881,5 +881,8 @@ Explora Resultados de la búsqueda
 #search_button2_txt
 (Abre en ventana nueva)
 
+#search_button3_txt
+Buscar
+
 #search_placeholder_txt
-Tipo de Busca, pulse Enter (ejemplo. quake) o clic en para añadir
+Tipo (por ejemplo. Sismo) o añadir filtros para limitar su búsqueda
