@@ -72,11 +72,7 @@
 
 	<div id="search_div"><span id="result_span"></span></div>
 
-	<input type="text" id="view_search_string" class="typeahead" placeholder="{search_placeholder_txt}"/>
-
-	<div id="search_div">
-		<div><span id="search_span"></span></div>
-		<div><a id="search_link" target="_blank">{search_button1_txt}<span>{search_button2_txt}</span></a></div>
-	</div>
+	<div style="position:relative;"><input type="text" id="view_search_string" class="typeahead" placeholder="{search_placeholder_txt}"/>
+	<a id="search_link" target="_blank">{search_button3_txt}</a></div>
 	
 </div>
