@@ -1,3 +1,10 @@
+Development Portal (2016-05-31 shi)
+==============================
+Change layout of Search button
+Updated text on search button
+Add translations for search button
+
+
 Development Portal (2016-01-30 shi)
 ==============================
 Added portal link on individual Dash profiles
